# cloneable_errors

./: Cargo.toml  LICENSE  README.md
src/: context.rs  extensions.rs  iterator.rs  lib.rs  serializable.rs  strings.rs  util.rs
src/context/: anyhow.rs  error.rs  mod.rs  result.rs  result_extensions.rs  struct.rs
tests/: bincode.rs  extensions.rs
