[package]
name = "cloneable_errors"
description = "A library similar to anyhow, that allows the errors to be cloned, shared, cached and even sent over the network"
version = "1.0.1"
repository = "https://github.com/mini-bomba/cloneable_errors"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.79", optional = true}
serde = {version = "1.0.215", features = ["derive", "rc"], optional = true}

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
# personal code style preferences
module_name_repetitions = "allow"

[package.metadata.docs.rs]
all-features = true
