[package]
name = "cloneable_errors"
description = "A library similar to anyhow, that allows the errors to be cloned, shared, cached and even sent over the network"
version = "2.3.0"
repository = "https://github.com/mini-bomba/cloneable_errors"
license = "MIT"
edition = "2021"

[features]
# allows the errors to contain arbitrary "extension" properties
extensions = []
anyhow = ["dep:anyhow"]
bincode = ["dep:bincode"]
serde = ["dep:serde"]

[dependencies]
anyhow = {version = "1.0.79", optional = true}
bincode = { version = "2.0.1", default-features = false, features = ["derive", "alloc"], optional = true }
serde = {version = "1.0.215", default-features = false, features = ["derive", "rc", "alloc"], optional = true}

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
# personal code style preferences
module_name_repetitions = "allow"

[package.metadata.docs.rs]
all-features = true
